--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <title>Angular Panhandler</title>
-      <link rel="stylesheet" href="/css/styles.css">
+      <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <section class="hero">
