adding googlecdn angular.js version 1.2.3 to ensure that example works

--- a/example/index.html
+++ b/example/index.html
@@ -25,6 +25,7 @@
         </div>
       </section>
     </div>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
     <script src="/js/dependencies.js"></script>
     <script src="/js/angular-panhandler.js"></script>
     <script src="/examples.js"></script>
