--- a/example/index.html
+++ b/example/index.html
@@ -16,8 +16,10 @@
           <div ng-controller="Example1">
             <input name="preventPan" type="checkbox" ng-model="preventPan" />
             <label for="preventPan">Prevent Panning</label>
+            <input name="preventPanItem" type="checkbox" ng-model="preventPanItem" />
+            <label for="preventPanItem">Prevent Panning on items</label>
             <div class="grid" panhandler content-width="100em" prevent-pan="{{preventPan}}">
-              <div class="grid-block" ng-repeat="item in gridItems">
+              <div class="grid-block" ng-class="{iCannotScroll: preventPanItem==true}" ng-repeat="item in gridItems">
                 <span class="grid-number">{{$index + 1}}</span>
               </div>
             </div>
